<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imvAvt"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_my_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percents" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCaNhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/grandstander_regular"
            android:text="@string/c_p_nh_t_th_ng_tin_c_nh_n"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imvAvt"
            app:layout_constraintTop_toTopOf="@+id/imvAvt" 
            android:paddingVertical="3dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPass"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:text="@string/c_p_nh_t_m_t_kh_u"
            android:textColor="#FD5F5F"
            app:layout_constraintStart_toStartOf="@+id/tvCaNhan"
            app:layout_constraintTop_toBottomOf="@+id/tvCaNhan"
            android:paddingVertical="3dp"
            android:fontFamily="@font/grandstander_regular"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_card_border"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imvAvt">

            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_notifi" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/grandstander_regular"
                    android:text="@string/qu_n_l_th_ng_so"
                    android:textColor="#4b4b4b"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_card_border"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cv1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_calendar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/grandstander_regular"
                    android:text="@string/qu_n_l_l_ch_h_n"
                    android:textColor="#4b4b4b"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_card_border"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cv2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_user" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/grandstander_regular"
                    android:text="@string/th_ng_tin_c_nh_n"
                    android:textColor="#4b4b4b"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_card_border"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cv3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_logout" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/grandstander_regular"
                    android:text="@string/ng_xu_t"
                    android:textColor="#FD5F5F"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>