<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#49C7EF">

        <LinearLayout
            android:id="@+id/linear_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="26dp">

            <LinearLayout
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imvback"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/grandstander_bold"
                    android:gravity="center_vertical"
                    android:text="@string/qu_n_l_th_ng_b_o"
                    android:textColor="#242424"
                    android:textSize="24sp"
                    app:layout_constraintStart_toEndOf="@id/imvback" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_screen_language"
                android:orientation="vertical" >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="@string/t_nn"
                    android:textColor="#2E2E2E"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#2E2E2E"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginHorizontal="12dp"
                    app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/appCompatTextView2"
                    app:layout_constraintTop_toTopOf="@+id/appCompatTextView2" />

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="6dp"
                    android:background="#454444"
                    app:layout_constraintTop_toBottomOf="@+id/tvName"
                    tools:layout_editor_absoluteX="20dp"
                    android:orientation="horizontal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/age"
                    android:textColor="#2E2E2E"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#2E2E2E"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginHorizontal="12dp"
                    app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/appCompatTextView2"
                    app:layout_constraintTop_toTopOf="@+id/appCompatTextView4" />

                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="6dp"
                    android:background="#454444"
                    app:layout_constraintTop_toBottomOf="@+id/tvAge"
                    android:orientation="horizontal" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>